got the nav bar working and got it to not affect the rest of the paige

--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,28 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <header>
+    <h1>Resume</h1>
+
+    </header>
+    <div id="topnav">
+        <a href="home.html">Home</a>
+        <a href="bio.html">Bio</a>
+        <a href="work.html">Projects</a>
+        <a href="resume.html">Resume</a>
+    </div>
+    <main>
+        <h3>just a place holder</h3>
+        <ol>
+            <li>Fareway Food Stores</li>
+            <li>Tesdale Electric</li>
+            <li>Bayer Built Doors</li>
+            <li>Pezzetti Erosion Controle, INC.</li>
+            <li>Cascade Erosion Solutions</li>
+        </ol>
+    </main>
+
+
     
 
 
