--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
         <a href="resume.html">Resume</a>
     </div>
     <main>
-        <h3>just a place holder</h3>
+        <h3></h3>
 
     
     
@@ -47,7 +47,11 @@
 
 
 
+    <div id="botnav">
+        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
 
+    </div>
 
 
 
