--- a/work.html
+++ b/work.html
@@ -29,7 +29,11 @@
     
     </main>
 
-
+    <div id="botnav">
+        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
+    
+    </div>
 <!-- boot strap script -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
