--- a/work.html
+++ b/work.html
@@ -22,6 +22,12 @@
         <a href="resume.html">Resume</a>
     </div>
     <main>
+        <div id="projls">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+        </div>
         
 
     
