got the lniks for reusme pages working (past jobs will now togle hidde and show content when clicked

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css link -->
-    <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href=style/style.css>
     <!-- js link  -->
     <script src="app.js"></script>
 </head>
@@ -24,8 +24,8 @@
     <div id="greating">
         <main>
             <h3>Good day!</h3>
-                <P>I hope you are well, rested, and fed. this is my profile page that tells you a little about my self as well as what i ahve done so far.</P>
-                <p>Enojay the photo wheel of the furry animals that is my family.</p>
+                <P>I hope you are well, rested, and fed. this is my profile page that tells you a little about my self as well as what i have done so far.</P>
+                <p>inojay the photo wheel of the furry animals that is my family.</p>
 
         </main>
     </div>
