--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- css link -->
-    <link rel="stylesheet" href=style.css>
+    <link rel="stylesheet" href=style/style.css>
     <!-- js link  -->
-    <script src="app.js"></script>
+    <!-- boot strap script -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -23,13 +25,18 @@
     </div>
     <main>
         <h3>just a place holder</h3>
-        <ol>
-            <li>Fareway Food Stores</li>
-            <li>Tesdale Electric</li>
-            <li>Bayer Built Doors</li>
-            <li>Pezzetti Erosion Controle, INC.</li>
-            <li>Cascade Erosion Solutions</li>
-        </ol>
+        <div class="jobs">
+            <li><a class = "far" href="#">Fareway Food Stores</a></li>
+                <p class="infoF">hello</p>
+            <li><a class="tes" href="#">Tesdale Electric</a></li>
+                <P class="infoE">i was an electrition aprenticewith Tesdale Electric for almost three years. during that time i learned time manegment in getting my job done on time in order to not hold up the other trades. i also learned comunication and team building skills, as well as atended aprentice school for those three years </P>
+            <li><a class="bay" href="#">Bayer Built Doors</a></li>
+                <p class="infoB">hello</p>
+            <li><a class="pez" href="#">Pezzetti Erosion Controle, INC.</a></li>
+                <p class="infoP">hello</p>
+            <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
+                <p class="infoC">hello</p>
+        </div>
     </main>
 
 
@@ -50,9 +57,7 @@
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
     
     </div>
-<!-- boot strap script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+<script src="app.js"></script>
+
 </body>
 </html>
