--- a/home.html
+++ b/home.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <!-- css link -->
     <link rel="stylesheet" href=style/style.css>
-    <!-- js link  -->
-    <script src="app.js"></script>
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
 </head>
 <body>
     <header>
@@ -29,6 +31,33 @@
 
         </main>
     </div>
+
+    <div class="container">
+        <!-- =========== CAROUSEL TOP ============== -->
+    
+        <h1>Rechkemmer animals</h1>
+        <!-- =========== CAROUSEL CONTAINER ======== -->
+        <div class="carousel-container">
+            <!-- previous button -->
+            <div class="carousel-button previous">
+                <!-- from linearicons icon font -->
+                <span class="lnr lnr-chevron-left"></span>
+            </div>
+            <!-- images -->
+            <div class="carousel-images">
+                <img src="images/max.jpg" alt="Mut" />
+                <img src="images/sora.jpg" alt="Blue Healer" />
+                <img src="images/aand.jpg" alt="aang" />
+                <img src="images/momo.jpg" alt="momo" />
+            </div>
+            <!-- next button -->
+            <div class="carousel-button next">
+                <!-- from linearicons icon font -->
+                <span class="lnr lnr-chevron-right"></span>
+                <!-- strech goul add window to display names -->
+            </div>
+        </div>
+    </div>
     
     <div id="botnav">
         <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
@@ -39,8 +68,10 @@
 
 
 <!-- boot strap script -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- java script -->
+<script src="app.js"></script>
 </body>
 </html>
