filled out my bio with three <p>

--- a/resume.html
+++ b/resume.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <!-- css link -->
     <link rel="stylesheet" href=style/style.css>
-    <!-- js link  -->
-    <!-- boot strap script -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    
+    <!-- script -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -24,7 +24,6 @@
         <a href="resume.html">Resume</a>
     </div>
     <main>
-        <h3>just a place holder</h3>
         <div class="jobs">
             <li><a class = "far" href="#">Fareway Food Stores</a></li>
                 <p class="infoF">hello</p>
