finished tesdel and fareway in resume, working on door factory

--- a/resume.html
+++ b/resume.html
@@ -26,11 +26,11 @@
     <main>
         <div class="jobs">
             <li><a class = "far" href="#">Fareway Food Stores</a></li>
-                <p class="infoF">hello</p>
+                <p class="infoF">At Fareway groucery stores I worked as the bag boy/universal worker. my job was to bag the customers grocerys as well as carry them out to their car. my other duties where to fill in around the store whare ever help was needed. through this i gained skills in adapting to my work, customer relations, and record keeping.</p>
             <li><a class="tes" href="#">Tesdale Electric</a></li>
                 <P class="infoE">i was an electrition aprenticewith Tesdale Electric for almost three years. during that time i learned time manegment in getting my job done on time in order to not hold up the other trades. i also learned comunication and team building skills, as well as atended aprentice school for those three years </P>
             <li><a class="bay" href="#">Bayer Built Doors</a></li>
-                <p class="infoB">hello</p>
+                <p class="infoB">Bayer Built Doors is a door manufacter in minasoa I was emplaoyed at for about three mounth while i looked for a place in my home state to work. </p>
             <li><a class="pez" href="#">Pezzetti Erosion Controle, INC.</a></li>
                 <p class="infoP">hello</p>
             <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
