added the rest of the caresel almost finished resume page

--- a/home.html
+++ b/home.html
@@ -47,8 +47,9 @@
             <div class="carousel-images">
                 <img src="images/max.jpg" alt="Mut" />
                 <img src="images/sora.jpg" alt="Blue Healer" />
-                <img src="images/aand.jpg" alt="aang" />
+                <img src="images/aang.jpg" alt="aang" />
                 <img src="images/momo.jpg" alt="momo" />
+                <img src="images/sakka.jpg" alt="sakka" />
             </div>
             <!-- next button -->
             <div class="carousel-button next">
@@ -60,8 +61,8 @@
     </div>
     
     <div id="botnav">
-        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
-        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
+        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a> -->
 
     </div>
 
@@ -70,8 +71,8 @@
 <!-- boot strap script -->
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- java script -->
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
+     <!-- java script -->
 <script src="app.js"></script>
 </body>
 </html>
