--- a/work.html
+++ b/work.html
@@ -23,10 +23,9 @@
     </div>
     <main>
         <div id="projls">
-            <li>item 1</li>
-            <li>item 2</li>
-            <li>item 3</li>
-            <li>item 4</li>
+            <li>SPACE BATTLE hw</li>
+            <li>LANDSCAPING SIMULATER hw</li>
+            <li>wood turned lamp</li>
         </div>
         
 
@@ -36,8 +35,8 @@
     </main>
 
     <div id="botnav">
-        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
-        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
+        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a> -->
     
     </div>
 <!-- boot strap script -->
