--- a/resume.html
+++ b/resume.html
@@ -52,9 +52,9 @@
 
 
     <div id="botnav">
-        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
-    
+     -->
     </div>
 <script src="app.js"></script>
 
