almost done with resume page tried to get hidde toggle work right and no luck yet. also fixed spacing problem on bio

--- a/work.html
+++ b/work.html
@@ -35,8 +35,8 @@
     </main>
 
     <div id="botnav">
-        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
-        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a> -->
+        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
     
     </div>
 <!-- boot strap script -->
