--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@
     </div>
     
     <div id="botnav">
-        <!-- <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
-        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a> -->
+        <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
+        <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
 
     </div>
 
@@ -70,9 +70,9 @@
 
 <!-- boot strap script -->
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
      <!-- java script -->
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
