fix bottom nav so it dose not cover content as well as finished bio page

--- a/resume.html
+++ b/resume.html
@@ -17,13 +17,13 @@
     <h1>Resume</h1>
 
     </header>
-    <div id="topnav">
+    <div class="topnav">
         <a href="home.html">Home</a>
         <a href="bio.html">Bio</a>
         <a href="work.html">Projects</a>
         <a href="resume.html">Resume</a>
     </div>
-    <main>
+    <div class = "container">
         <div class="jobs">
             <li><a class="far" href="#">Fareway Food Stores</a></li>
                 <p class="infoF">At Fareway groucery stores I worked as the bag boy/universal worker. my job was to bag the customers grocerys as well as carry them out to their car. my other duties where to fill in around the store whare ever help was needed. through this i gained skills in adapting to my work, customer relations, and record keeping.</p>
@@ -32,11 +32,11 @@
             <li><a class="bay" href="#">Bayer Built Doors</a></li>
                 <p class="infoB">Bayer Built Doors is a door manufacter in minasoa I was emplaoyed at for about three mounth while i looked for a place in my home state to work. Bayer Built imployed me as a asembly line worker, on the painting belt.My job was to inspect them, whipe down the doors where the paint built up and puddled, as well as load them on to the cart to be taked to distrabution.</p>
             <li><a class="pez" href="#">Pezzetti Erosion Controle, INC.</a></li>
-                <p class="infoP">Pezzetti Erosion Controle, INC. </p>
+                <p class="infoP">Pezzetti Erosion Controle, INC. I started work as a laboror and with in 2 mounth was a erosion controle enginer with a class a cdl with tanker and airbreak indorsment. i was intrusted with maps of the job site as well as ecuempment to get the job done. our only goul at this company was to stop the erosion of soul off the jobsites do to watter run off. we didi jobs for contractors as well as enviroment agenceys and state jobs.</p>
             <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
-                <p class="infoC">hello</p>
+                <p class="infoC">Cascade Erosion Solutions is also an erosion controle company. my job title was erosion controle enginer, i was tasked with going to job site around the des monies area and surounding citys and put up silt fence. this is a screan of sorts we put into the ground with a tractor and a plow. i had to install, pack, stabe tpost behind the silt fence, then use thr tractor loader bucket to smack them into the ground at the right hight, then we zipptied the fence to the t posts. this was done in water ways to alow thewater through and keep the dirt on site.</p>
         </div>
-    </main>
+    </div>
 
 
     
@@ -51,7 +51,7 @@
 
 
 
-    <div id="botnav">
+    <div class="botnav">
         <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
     
