--- a/home.html
+++ b/home.html
@@ -17,13 +17,13 @@
         <h1>Bailey Rechkemmer</h1>
         
     </header>
-    <div id="topnav">
+    <div class="topnav">
         <a href="home.html">Home</a>
         <a href="bio.html">Bio</a>
         <a href="work.html">Projects</a>
         <a href="resume.html">Resume</a>
     </div>
-    <div id="greating">
+    <div class="greating">
         <main>
             <h3>Good day!</h3>
                 <P>I hope you are well, rested, and fed. this is my profile page that tells you a little about my self as well as what i have done so far.</P>
@@ -60,7 +60,7 @@
         </div>
     </div>
     
-    <div id="botnav">
+    <div class="botnav">
         <a href="http://www.linkedin.com/in/bailey-rechkemmer-35b3a0261">Linkedin account</a>
         <a href="http://www.github.com/Baileyrechkemmr">Baileys github</a>
 
