got the media script up and running, starting on spell check

--- a/work.html
+++ b/work.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href=style/style.css>
     <!-- js link  -->
     <script src="app.js"></script>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
@@ -24,7 +26,9 @@
     <main>
         <div class="projls">
             <li>SPACE BATTLE hw</li>
+                <p>this was a space battle in witch the computer made 6 ships with random hull strength, fire power, and acurracy. your goul was to defeet all alian ships and save earth.</p>
             <li>LANDSCAPING SIMULATER hw</li>
+                <p></p>
             <li>wood turned lamp</li>
         </div>
         
