--- a/home.html
+++ b/home.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
