--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,8 @@
     <!-- script -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
