everything is spell checked and filled out now to start on little tweeks to carosel and send out for per-revew

--- a/home.html
+++ b/home.html
@@ -28,8 +28,9 @@
     <div class="greating">
         <main>
             <h3>Good day!</h3>
-                <P>I hope you are well, rested, and fed. this is my profile page that tells you a little about my self as well as what i have done so far.</P>
-                <p>inojay the photo wheel of the furry animals that is my family.</p>
+                <P>I hope you are well, rested, and fed. This is my profile page that tells you a little about myself as well as what I
+                have done so far.</P>
+                <p>Enjoy the photo wheel of the furry animals that are my family.</p>
 
         </main>
     </div>
