--- a/work.html
+++ b/work.html
@@ -26,10 +26,15 @@
     <main>
         <div class="projls">
             <li>SPACE BATTLE hw</li>
-                <p>this was a space battle in witch the computer made 6 ships with random hull strength, fire power, and acurracy. your goul was to defeet all alian ships and save earth.</p>
+                <p>This was a space battle in which the computer made 6 ships with random hull strength, fire power, and accuracy. Your goal was to defeat all alien ships and save earth. In this assignment I had more trouble than I thought I would in making a random array of ships and honestly would have made me quit. Only this stuff also made me more intrigued than anything else.</p>
             <li>LANDSCAPING SIMULATER hw</li>
-                <p></p>
+                <p>This was a more complicated assignment as we had to make more functions and callbacks than the other games we had as
+                home work. as well as learning new ways to get the code to work in a DRY way. This also was a fun way to really hit home
+                the lessons and get in practice.</p>
             <li>wood turned lamp</li>
+                <p>This was a simple woodworking project I did, it reminded me of building the website however. putting together the slabs
+                of wood and removing what isn't needed to get something beautiful.
+</p>
         </div>
         
 
