--- a/resume.html
+++ b/resume.html
@@ -28,15 +28,28 @@
     <div class = "container">
         <div class="jobs">
             <li><a class="far" href="#">Fareway Food Stores</a></li>
-                <p class="infoF">At Fareway groucery stores I worked as the bag boy/universal worker. my job was to bag the customers grocerys as well as carry them out to their car. my other duties where to fill in around the store whare ever help was needed. through this i gained skills in adapting to my work, customer relations, and record keeping.</p>
-            <li><a class="tes" href="#">Tesdale Electric</a></li>
-                <P class="infoE">i was an electrition aprenticewith Tesdale Electric for almost three years. during that time i learned time manegment in getting my job done on time in order to not hold up the other trades. i also learned comunication and team building skills, as well as atended aprentice school for those three years </P>
+                <p class="infoF">At Fareway grocery stores I worked as the bag boy/universal worker. My job was to bag the customers groceries as well as
+                carry them out to their car. My other duties were to fill in around the store wherever help was needed. Through this I
+                gained skills in adapting to my work, customer relations, and record keeping.</p>
+            <li><a class="tes" href="#">Tesdell Electric</a></li>
+                <P class="infoE">I was an apprentice electrician with Tesdell Electric for almost three years. During that time I learned time management
+                in getting my job done on time in order to not hold up the other trades. i also learned communication and team building
+                skills, as well as attended apprentice school for those three years </P>
             <li><a class="bay" href="#">Bayer Built Doors</a></li>
-                <p class="infoB">Bayer Built Doors is a door manufacter in minasoa I was emplaoyed at for about three mounth while i looked for a place in my home state to work. Bayer Built imployed me as a asembly line worker, on the painting belt.My job was to inspect them, whipe down the doors where the paint built up and puddled, as well as load them on to the cart to be taked to distrabution.</p>
+                <p class="infoB">Bayer Built Doors is a door manufacturer in Minnesota I was employed at for about three months while I looked for a place in my home state to work. Bayer Built employed me as a assembly line worker, on the painting belt.My job was to
+                inspect them, wipe down the doors where the paint built up and puddled, as well as load them onto the cart to be taken
+                to distribution.</p>
             <li><a class="pez" href="#">Pezzetti Erosion Controle, INC.</a></li>
-                <p class="infoP">Pezzetti Erosion Controle, INC. I started work as a laboror and with in 2 mounth was a erosion controle enginer with a class a cdl with tanker and airbreak indorsment. i was intrusted with maps of the job site as well as ecuempment to get the job done. our only goul at this company was to stop the erosion of soul off the jobsites do to watter run off. we didi jobs for contractors as well as enviroment agenceys and state jobs.</p>
+                <p class="infoP">Pezzetti Erosion Control, INC. I started work as a laborer and within 2 months was an erosion control engineer with a
+                class a cdl with tanker and airbrake endorsement. I was entrusted with maps of the job site as well as equipment to get
+                the job done. Our only goal at this company was to stop the erosion of soil off the job sites to water run off. we didi
+                jobs for contractors as well as environmental agencies and state jobs.</p>
             <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
-                <p class="infoC">Cascade Erosion Solutions is also an erosion controle company. my job title was erosion controle enginer, i was tasked with going to job site around the des monies area and surounding citys and put up silt fence. this is a screan of sorts we put into the ground with a tractor and a plow. i had to install, pack, stabe tpost behind the silt fence, then use thr tractor loader bucket to smack them into the ground at the right hight, then we zipptied the fence to the t posts. this was done in water ways to alow thewater through and keep the dirt on site.</p>
+                <p class="infoC">Cascade Erosion Solutions is also an erosion control company. My job title was erosion control engineer. I was tasked
+                with going to a job site around the des moines area and surrounding cities and putting up a silt fence. This is a screen
+                of sorts we put into the ground with a tractor and a plow. I had to install, pack, stab posts behind the silt fence,
+                then use the tractor loader bucket to smack them into the ground at the right height, then we ziptied the fence to the t
+                posts. This was done in water ways to slow the water flow and keep the dirt on site.</p>
         </div>
     </div>
 
