--- a/resume.html
+++ b/resume.html
@@ -28,12 +28,9 @@
     <div class = "container">
         <div class="jobs">
             <li><a class="far" href="#">Fareway Food Stores</a></li>
-                <p class="infoF">At Fareway grocery stores I worked as the bag boy/universal worker. My job was to bag the customers groceries as well as
-                carry them out to their car. My other duties were to fill in around the store wherever help was needed. Through this I
-                gained skills in adapting to my work, customer relations, and record keeping.</p>
+                <p class="infoF">At Fareway grocery stores I worked as the bag boy/universal worker. My job was to bag the customers groceries as well as carry them out to their car. My other duties were to fill in around the store wherever help was needed. Through this I gained skills in adapting to my work, customer relations, and record keeping.</p>
             <li><a class="tes" href="#">Tesdell Electric</a></li>
-                <P class="infoE">I was an apprentice electrician with Tesdell Electric for almost three years. During that time I learned time management
-                in getting my job done on time in order to not hold up the other trades. i also learned communication and team building
+                <P class="infoE">I was an apprentice electrician with Tesdell Electric for almost three years. During that time I learned time management in getting my job done on time in order to not hold up the other trades. i also learned communication and team building
                 skills, as well as attended apprentice school for those three years </P>
             <li><a class="bay" href="#">Bayer Built Doors</a></li>
                 <p class="infoB">Bayer Built Doors is a door manufacturer in Minnesota I was employed at for about three months while I looked for a place in my home state to work. Bayer Built employed me as a assembly line worker, on the painting belt.My job was to
@@ -45,8 +42,7 @@
                 the job done. Our only goal at this company was to stop the erosion of soil off the job sites to water run off. we didi
                 jobs for contractors as well as environmental agencies and state jobs.</p>
             <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
-                <p class="infoC">Cascade Erosion Solutions is also an erosion control company. My job title was erosion control engineer. I was tasked
-                with going to a job site around the des moines area and surrounding cities and putting up a silt fence. This is a screen
+                <p class="infoC">Cascade Erosion Solutions is also an erosion control company. My job title was erosion control engineer. I was tasked with going to a job site around the des moines area and surrounding cities and putting up a silt fence. This is a screen
                 of sorts we put into the ground with a tractor and a plow. I had to install, pack, stab posts behind the silt fence,
                 then use the tractor loader bucket to smack them into the ground at the right height, then we ziptied the fence to the t
                 posts. This was done in water ways to slow the water flow and keep the dirt on site.</p>
