got text to all line up nice and neet only a few bugs then start on strech gouls

--- a/home.html
+++ b/home.html
@@ -28,9 +28,9 @@
     <div class="greating">
         <main>
             <h3>Good day!</h3>
-                <P>I hope you are well, rested, and fed. This is my profile page that tells you a little about myself as well as what I
+                <P id="elementText2">I hope you are well, rested, and fed. This is my profile page that tells you a little about myself as well as what I
                 have done so far.</P>
-                <p>Enjoy the photo wheel of the furry animals that are my family.</p>
+                <p id="elementText2">Enjoy the photo wheel of the furry animals that are my family.</p>
 
         </main>
     </div>
