got the resume items to load in hidden working on nav

--- a/home.html
+++ b/home.html
@@ -29,8 +29,7 @@
         <main>
             <h3>Good day!</h3>
                 <P id="elementText2">I hope you are well, rested, and fed. This is my profile page that tells you a little about myself as well as what I
-                have done so far.</P>
-                <p id="elementText2">Enjoy the photo wheel of the furry animals that are my family.</p>
+                have done so far.Enjoy the photo wheel of the furry animals that are my family.</P>
 
         </main>
     </div>
