could not get imges to be the same size started filling out read me got to basic secklington of wed site build

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
     <div class="container">
         <!-- =========== CAROUSEL TOP ============== -->
     
-        <h1>Rechkemmer animals</h1>
+        <h1>Rechkemmer Animals</h1>
         <!-- =========== CAROUSEL CONTAINER ======== -->
         <div class="carousel-container">
             <!-- previous button -->
