--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
                 <p id="elementText">This was a more complicated assignment as we had to make more functions and callbacks than the other games we had as
                 home work. as well as learning new ways to get the code to work in a DRY way. This also was a fun way to really hit home
                 the lessons and get in practice.</p>
-            <li>wood turned lamp</li>
+            <li>WOOD TURNED LAMP</li>
                 <p id="elementText">This was a simple woodworking project I did, it reminded me of building the website however. putting together the slabs
                 of wood and removing what isn't needed to get something beautiful.
 </p>
