--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <header>
+    <header class="header">
     <h1>Resume</h1>
 
     </header>
