--- a/resume.html
+++ b/resume.html
@@ -28,19 +28,21 @@
     <div class = "container">
         <div class="jobs">
             <li><a class="far" href="#">Fareway Food Stores</a></li>
-                <p class="infoF hidden" id="elementTextR" >At Fareway grocery stores I worked as the bag boy/universal worker. My job was to bag the customers groceries as well as carry them out to their car. My other duties were to fill in around the store wherever help was needed. Through this I gained skills in adapting to my work, customer relations, and record keeping.</p>
+                <div class="infoF hidden" id="elementTextR" >
+                    At Fareway grocery stores I worked as the bag boy/universal worker. My job was to bag the customers groceries as well as carry them out to their car. My other duties were to fill in around the store wherever help was needed. Through this I gained skills in adapting to my work, customer relations, and record keeping.</p>
+                </div>
             <li><a class="tes" href="#">Tesdell Electric</a></li>
-                <P class="infoE hidden" id="elementTextR" >I was an apprentice electrician with Tesdell Electric for almost three years. During that time I learned time management in getting my job done on time in order to not hold up the other trades. i also learned communication and team building
-                skills, as well as attended apprentice school for those three years </P>
+                <div class="infoE hidden" id="elementTextR" >
+                    I was an apprentice electrician with Tesdell Electric for almost three years. During that time I learned time management in getting my job done on time in order to not hold up the other trades. i also learned communication and team building skills, as well as attended apprentice school for those three years </P>
+                </div>
             <li><a class="bay" href="#">Bayer Built Doors</a></li>
-                <p class="infoB hidden" id="elementTextR" >Bayer Built Doors is a door manufacturer in Minnesota I was employed at for about three months while I looked for a place in my home state to work. Bayer Built employed me as a assembly line worker, on the painting belt.My job was to
-                inspect them, wipe down the doors where the paint built up and puddled, as well as load them onto the cart to be taken
-                to distribution.</p>
+                <div class="infoB hidden" id="elementTextR" >
+                    Bayer Built Doors is a door manufacturer in Minnesota I was employed at for about three months while I looked for a place in my home state to work. Bayer Built employed me as a assembly line worker, on the painting belt.My job was to inspect them, wipe down the doors where the paint built up and puddled, as well as load them onto the cart to be taken to distribution.</p>
+                </div>
             <li><a class="pez" href="#">Pezzetti Erosion Controle, INC.</a></li>
-                <p class="infoP hidden" id="elementTextR" >Pezzetti Erosion Control, INC. I started work as a laborer and within 2 months was an erosion control engineer with a
-                class a cdl with tanker and airbrake endorsement. I was entrusted with maps of the job site as well as equipment to get
-                the job done. Our only goal at this company was to stop the erosion of soil off the job sites to water run off. we didi
-                jobs for contractors as well as environmental agencies and state jobs.</p>
+                <div class="infoP hidden" id="elementTextR" >
+                    <p>Pezzetti Erosion Control, INC. I started work as a laborer and within 2 months was an erosion control engineer with a class a cdl with tanker and airbrake endorsement. I was entrusted with maps of the job site as well as equipment to get the job done. Our only goal at this company was to stop the erosion of soil off the job sites to water run off. we did jobs for contractors as well as environmental agencies and state jobs.</p>
+                </div>
             <li><a class="cas" href="#">Cascade Erosion Solutions</a></li>
                 <div class="infoC hidden" id="elementTextR" >
                     <p>Cascade Erosion Solutions is also an erosion control company. My job title was erosion control engineer. I was tasked with going to a job site around the des moines area and surrounding cities and putting up a silt fence. This is a screen of sorts we put into the ground with a tractor and a plow. I had to install, pack, stab posts behind the silt fence, then use the tractor loader bucket to smack them into the ground at the right height, then we ziptied the fence to the T-posts. This was done in water ways to slow the water flow and keep the dirt on site.</p>
